Add news section

--- a/index.html
+++ b/index.html
@@ -243,18 +243,66 @@
 					</figcaption>
 				</figure>
 			</div>
-			</div>
 		</main>	
-		<section class="new__inwest">
-			<header>
-				<div></div>
-				<div></div>
+		<article class="news">
+			<header class="news__header">
+				<h2 class="news__header-main-text">Aktualności</h2>
+				<a class="news__header-text" href="#">	Wszystkie aktualności</a>
 			</header>
-			<div class="properties">
-				<div>
-					<div></div>
-	
-		</section>
+			<div class="news__container">
+				<div class="news__container-item">
+					<figure class="news__icon">
+							<i class="fas fa-building bif"></i>
+					</figure>
+					<aside class="news__container-core">
+						<header class="news__title">
+							<h3>Wesołych świąt</h3>
+						</header>
+						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+								pariatur.</p>
+						<a class="news__link" href="#">Więcej</a>
+					</aside>
+				</div>
+				<div class="news__container-item">
+					<figure class="news__icon">
+						<i class="fa fa-table bif"></i>
+					</figure>
+					<aside class="news__container-core">
+						<header class="news__title">
+							<h3>Wesołych świąt</h2>
+						</header>
+						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+								pariatur.</p>
+						<a class="news__link" href="#">Więcej</a>
+					</aside>
+				</div>
+				<div class="news__container-item">
+					<figure class="news__icon">
+						<i class="fa fa-home bif"></i>
+					</figure>
+					<aside class="news__container-core">
+						<header class="news__title">
+							<h3>Wesołych świąt</h3>
+						</header>
+						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+								pariatur.</p>
+						 <a class="news__link" href="#">Więcej</a>
+					</aside>
+				</div>
+			<div>
+		</article>
 	</body>
 
 </html>
