Add section other news and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<title>Document</title>
 	</head>
 	<body>
+		<!-- #top -->
 			<div class="contact">
 				<div class="contact__container">
 					<ul class="contact__list">
@@ -303,6 +304,75 @@
 				</div>
 			<div>
 		</article>
+		<article class="other">
+			<header class="other__header">
+				<h2 class="other__header-main">
+					Inne usługi
+				</h2>
+			</header>
+			<div class="other__container">
+				<div class="other__container-box">
+					<div class="other__container-mainbox">
+						<h3 class="other__main-text">Wytwórnia betony</h3>
+						<div>
+							<a href="#" class="other__link" href="#">Sprawdź</a>
+						</div>
+					</div>
+					<div class="other__container-mainbox">
+						<img src="images/beton.jpg" alt="beton">
+					</div>
+				</div>
+				<div class="other__container-box">
+					<div class="other__container-mainbox">
+						<h3 class="other__main-text">Kredyty</h3>
+						<div>
+							<a href="#" class="other__link"href="#">Sprawdź</a>
+						</div>
+					</div>
+					<div class="other__container-mainbox">
+						<img src="images/beton.jpg" alt="beton">
+					</div>
+				</div>
+			</div>
+		</article>
+		<hr>
+		<footer class="main__footer">
+			<div class="footer__container">
+				<div class="main__footer-box">
+					<h3 class="header__footer-box">Dane spółki</h3>
+					<p>Kombinat Budowlany Sp. z o. o.
+						<br>
+							15-099 Białystok ul. ul. Legionowa 14/16
+							<br>
+							NIP 542-030-35-89
+							<br>
+							REGON 050232763
+							<br>
+							KRS 0000035433 - Sąd Rejonowy w Białymstoku
+							<br>
+							Kapitał zakładowy 14 946 000,00 zł</p>
+				</div>
+				<div class="main__footer-box">
+					<h3 class="header__footer-box"> Sprzedaż mieszkań</h3>
+					<p class="main__footer-text">
+						Zapraszamy w godzinach 7:00-16:00 
+					</p>
+					<p class="main__footer-text"> 
+						mieszkania@kombinatbud.pl
+					</p>	
+					<p>
+						Tel. 85-741-50-87 
+					</p>
+				</div>
+			</div>
+		</footer>
 	</body>
+	<aside class="footer__aside">
+		<div class="footer__aside-container"> 
+			<p class="footer__aside-text">© Copyright 2019. All Rights Reserved. Realizacja: </p>
+			<a href="#top" class="footer__aside-link">na górę strony</a>
+		</div>
+		
+	</aside>
 
 </html>
