--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 				<div class="other__container-box">
 					<div class="other__container-mainbox">
 						<h3 class="other__main-text">Wytwórnia betony</h3>
-						<div>
+						<div class="other__contain-link">
 							<a href="#" class="other__link" href="#">Sprawdź</a>
 						</div>
 					</div>
@@ -325,7 +325,7 @@
 				<div class="other__container-box">
 					<div class="other__container-mainbox">
 						<h3 class="other__main-text">Kredyty</h3>
-						<div>
+						<div class="other__contain-link">
 							<a href="#" class="other__link"href="#">Sprawdź</a>
 						</div>
 					</div>
