Add media queries

--- a/index.html
+++ b/index.html
@@ -259,13 +259,13 @@
 						<header class="news__title">
 							<h3>Wesołych świąt</h3>
 						</header>
-						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+						<p class="news__title-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 								pariatur.</p>
-						<a class="news__link" href="#">Więcej</a>
+						<a class="news__link" href="#">Więcej...</a>
 					</aside>
 				</div>
 				<div class="news__container-item">
@@ -276,13 +276,13 @@
 						<header class="news__title">
 							<h3>Wesołych świąt</h2>
 						</header>
-						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+						<p class="news__title-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 								pariatur.</p>
-						<a class="news__link" href="#">Więcej</a>
+						<a class="news__link" href="#">Więcej...</a>
 					</aside>
 				</div>
 				<div class="news__container-item">
@@ -293,13 +293,13 @@
 						<header class="news__title">
 							<h3>Wesołych świąt</h3>
 						</header>
-						<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+						<p class="news__title-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,
 								sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 								nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
 								reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
 								pariatur.</p>
-						 <a class="news__link" href="#">Więcej</a>
+						 <a class="news__link" href="#">Więcej...</a>
 					</aside>
 				</div>
 			<div>
@@ -366,13 +366,12 @@
 				</div>
 			</div>
 		</footer>
+		<aside class="footer__aside">
+			<div class="footer__aside-container"> 
+				<p class="footer__aside-text">© Copyright 2019. All Rights Reserved. Realizacja: </p>
+				<a href="#top" class="footer__aside-link">na górę strony</a>
+			</div>
+			
+		</aside>
 	</body>
-	<aside class="footer__aside">
-		<div class="footer__aside-container"> 
-			<p class="footer__aside-text">© Copyright 2019. All Rights Reserved. Realizacja: </p>
-			<a href="#top" class="footer__aside-link">na górę strony</a>
-		</div>
-		
-	</aside>
-
 </html>
